resolved vertical align issues to prem-cta section

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -290,6 +290,9 @@ button:hover {
     background-image: url("../img/cta-section-background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    .valign {
+        margin: 0 auto !important;
+    }
 }
 
 // Media queries
